...
                .padding()
                .background(Color.white)
                .cornerRadius(10)
                .shadow(radius: 3)
                .transition(.move(edge: .leading).combined(with: .opacity))
                .animation(.easeInOut(duration: 0.5), value: text)
                .accessibilityIdentifier("SearchBarTextField") //Assign an identifier
            
            Button(action: onSearch) {
                Image(systemName: "magnifyingglass")
                    .padding()
                    .background(Circle().fill(Color.mercadoLibreBlue))
                    .foregroundColor(.white)
                    .scaleEffect(1.0)
                    .animation(.spring(), value: text)
            }
            .accessibilityIdentifier("SearchButton") // Identificador único
        }
    }
}

struct RefreshControl: UIViewRepresentable {
    func makeCoordinator() -> Coordinator {
...
