...
                    .font(.headline)
                    .foregroundColor(.green)
                    .padding()
                    .transition(.move(edge: .bottom))
                    .animation(.easeInOut(duration: 0.5), value: product.price)
            }
            .accessibilityIdentifier("ProductDetailTitle")
            .frame(maxWidth: .infinity)
            .padding(.all)
        }
        .frame(maxWidth: .infinity, maxHeight: .infinity) // Ensures VStack fills the entire screen
        .padding(.top)
        .navigationTitle(Localized.productDetailTitle)
...
